--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -10,6 +10,11 @@ body {
     background-color: #f0f0f0;
 }
 
+.alignHeaders{
+    display: flex;
+    justify-content: center;
+}
+
 /* Navbar */
 .navbar {
     background-color: #4CAF50;
@@ -37,6 +42,13 @@ body {
     font-size: 30px;
     text-decoration: none;
    
+}
+
+.placeNumber{
+    position: relative;
+    right: 41px;
+    font-size: 24px;
+    top: 20px;
 }
 
 /* Product Grid */
@@ -95,6 +107,14 @@ body {
 .product-image {
     max-width: 100%;
     height: 200px; /* Adjust height for better consistency */
+}
+
+.product-cost{
+    color: red;
+}
+
+.product-description{
+    padding: 5px 0px 5px 0px;
 }
 
 .product-button {
